@@ -1,3 +1,9 @@
+globus-gridftp-server (7.9-1+gt6.@distro@) @distro@; urgency=low
+
+  * Use globus_libc_unsetenv
+
+ -- Globus Toolkit <support@globus.org>  Tue, 27 May 2014 14:02:10 -0456
+
 globus-gridftp-server (7.8-1+gt6.@distro@) @distro@; urgency=low
 
   * Use package-named config.h
